# lisprs

./: .gitignore  Cargo.toml  README.md  init.scm
src/: arithmetic.rs  builtins.rs  env.rs  errors.rs  eval.rs  file.rs  lib.rs  log.rs  main.rs  parser.rs  values.rs
