[package]
name = "lisprs"
version = "0.1.0"
authors = ["Thomas Berryhill <oats@oatberry.me>"]
edition = '2018'

[lib]
name = "lisprs"
path = "src/lib.rs"

[[bin]]
name = "lisprs"
path = "src/main.rs"

[dependencies]
failure = "0.1"
failure_derive = "0.1"
itertools = "0.7"
rand = "0.5"
rustyline = "2.1"
structopt = "0.2"
